--- a/BubbleSort.html
+++ b/BubbleSort.html
@@ -7,7 +7,7 @@
 	<script type="text/javascript">
 
 		let arr = random(1,100000,10000);
-
+		//冒泡算法，不断的把最小数和最大数推向左右两边
 		function BubbleSort(arr){
 			for(let i = 0; i < arr.length; i++){
 				for(let j = 0; j < arr.length - 1; j++){
