快速排序算法
快速排序算法

--- a/MergeSort.html
+++ b/MergeSort.html
@@ -7,7 +7,7 @@
 	<script type="text/javascript">
 
 		
-		let arry = random(1,10000,1000);
+		let arry = random(1,1000000,100000);
 		//let arry = [1,6,7,3,4,45,1,2,4,5,56,12,4,4,8567,312,13,4,89,3,12,5,56,1];
 		
 		function insertSort(arry,left,right){
